# rustracer

./: Cargo.toml  README.md  config.json  scene.json
src/: axis_aligned_bb.rs  bvh_node.rs  camera.rs  gui.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  math.rs  pixel_buffer.rs  primitive.rs  program_args.rs  ray.rs  render_options.rs  rgbcolor.rs  scene.rs  sphere.rs  surface.rs  texture.rs  tmp.rs  vec3.rs
src/hittable/: hittable_list.rs  intersection.rs
src/scene/: background.rs  camera.rs  config.rs  scene_config.rs
