[package]
name = "rustracer"
version = "0.1.0"
authors = ["Mikastiv <m.leblanc_3@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
image = "0.23.14"
num_cpus = "1.13.0"
indicatif = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
