[package]
name = "rustracer"
version = "0.1.0"
authors = ["Mikastiv <m.leblanc_3@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
egui = "0.18"
egui-wgpu = "0.18"
egui-winit = { version = "0.18", default-features = false, features = ["links"] }
env_logger = "0.9"
log = "0.4"
pixels = "0.9"
winit = "0.26"
winit_input_helper = "0.12"
